Module_12/istio-specs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpsserver
spec:
  gateways:
    - httpsserver
  hosts:
    - httpsserver.mycncamp.io
  http:
    - match:
        - port: 443
        - uri:
            exact: "/httpserver/hello"
            rewrite:
              uri: "/hello"
      route:
        - destination:
            host: httpserver.securesvc.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: "/nginx"
        rewrite:
          uri: "/"
        route:
          - destination:
              host: nginx.simple.svc.cluster.local
              port:
                number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpsserver
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - httpsserver.mycncamp.io
      port:
        name: https-default
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: mycncamp-credential
